tooling/nargo_cli/tests/snapshots/execution_failure/unused_vector_get_unknown_index_out_of_bounds/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:2:18
  │
2 │     let vector = [1, 2, 3].as_vector();
  │                  -------------------
  │
  = Call stack:
    1: main
            at src/main.nr:2:18

Failed assertion
